version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Common/Graphics/DMGraphicsWrapper.rst.txt
.. vale off



:class:`DMGraphicsWrapper`
==========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Common.Graphics.DMGraphicsWrapper(dmGraphics: Ansys.Common.Interop.AGGfx.IAGGfxService)

   Bases: :py:obj:`object`


   
   Wrapper for Graphics in Design Modeler.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DMGraphicsWrapper

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CreateAndOpenDraw3DContext`
            - CreateAndOpenDraw3DContext method.
          * - :py:attr:`~CreatePixelPoint`
            - Creates a point from pixel coordinates (ie. window coordinates).
          * - :py:attr:`~CreateVector3D`
            - Create a 3D vector from world coordinates.
          * - :py:attr:`~CreateWorldPoint`
            - Create a point from world coordinates.
          * - :py:attr:`~DrawText2D`
            - DrawText2D method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~ExportScreenToImage`
            - Exports the current Graphics screen to a file.
          * - :py:attr:`~ForceResume`
            - Forces the scene to resume. Useful in interactive context (console) if a reference on an
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~LineTo2D`
            - LineTo2D method.
          * - :py:attr:`~MoveTo2D`
            - MoveTo2D method.
          * - :py:attr:`~PixelToWorld`
            - PixelToWorld method.
          * - :py:attr:`~Redraw`
            - Forces the scene to redraw its content.
          * - :py:attr:`~RemoveContext`
            - RemoveContext method.
          * - :py:attr:`~Suspend`
            - Prevents the scene to redraw until the Resume controller method was called.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~WorldToPixel`
            - WorldToPixel method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Camera`
            - Camera property.
          * - :py:attr:`~Color`
            - Color property.
          * - :py:attr:`~DepthTest`
            - DepthTest property.
          * - :py:attr:`~DrawContexts`
            - DrawContexts property.
          * - :py:attr:`~LineWeight`
            - LineWeight property.
          * - :py:attr:`~Scene`
            - Gets the scene.
          * - :py:attr:`~Translucency`
            - Translucency property.
          * - :py:attr:`~Unit`
            - Unit property.







Property detail
---------------
.. py:property:: Camera
   :type: Optional[Ansys.ACT.Interfaces.Graphics.ICamera]


   
   Camera property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Color
   :type: Optional[int]


   
   Color property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DepthTest
   :type: Optional[bool]


   
   DepthTest property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DrawContexts
   :type: Optional[List[Ansys.ACT.Interfaces.Graphics.IDrawContext]]


   
   DrawContexts property.
















   ..
       !! processed by numpydoc !!

.. py:property:: LineWeight
   :type: Optional[int]


   
   LineWeight property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Scene
   :type: Optional[Ansys.ACT.Interfaces.Graphics.IGraphicsCollection]


   
   Gets the scene.
















   ..
       !! processed by numpydoc !!

.. py:property:: Translucency
   :type: Optional[float]


   
   Translucency property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Unit
   :type: Optional[str]


   
   Unit property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CreateAndOpenDraw3DContext() -> Ansys.ACT.Interfaces.Graphics.IDraw3DContext

   
   CreateAndOpenDraw3DContext method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreatePixelPoint(x: int, y: int) -> Ansys.ACT.Interfaces.Graphics.IPixelPoint

   
   Creates a point from pixel coordinates (ie. window coordinates).

   ..
       !! processed by numpydoc !!

.. py:method:: CreateVector3D(x: float, y: float, z: float) -> Ansys.ACT.Interfaces.Graphics.IVector3D

   
   Create a 3D vector from world coordinates.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateWorldPoint(x: float, y: float, z: float) -> Ansys.ACT.Interfaces.Graphics.IWorldPoint

   
   Create a point from world coordinates.

   ..
       !! processed by numpydoc !!

.. py:method:: DrawText2D(x: int, y: int, text: str) -> None

   
   DrawText2D method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportScreenToImage(filePath: str) -> None

   
   Exports the current Graphics screen to a file.

   ..
       !! processed by numpydoc !!

.. py:method:: ForceResume() -> None

.. code-block:: text

   Forces the scene to resume. Useful in interactive context (console) if a reference on an
   operation has been lost.

..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: LineTo2D(x: int, y: int) -> None

   
   LineTo2D method.

   ..
       !! processed by numpydoc !!

.. py:method:: MoveTo2D(x: int, y: int) -> None

   
   MoveTo2D method.

   ..
       !! processed by numpydoc !!

.. py:method:: PixelToWorld(xy: Iterable[int]) -> float

   
   PixelToWorld method.

   ..
       !! processed by numpydoc !!

.. py:method:: Redraw() -> None

   
   Forces the scene to redraw its content.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveContext(context: Ansys.ACT.Interfaces.Graphics.IDrawContext) -> None

   
   RemoveContext method.

   ..
       !! processed by numpydoc !!

.. py:method:: Suspend() -> Ansys.ACT.Interfaces.Graphics.ISuspendController

   
   Prevents the scene to redraw until the Resume controller method was called.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: WorldToPixel(pt: Iterable[float]) -> int

   
   WorldToPixel method.

   ..
       !! processed by numpydoc !!



.. vale on